# SQLAlchemy-serializer

./: .cursorrules  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST  Makefile  README.md  docker-compose.yml  pylama.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: python-package.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  KNOWLEDGE.md
sqlalchemy_serializer/: __init__.py  serializer.py
sqlalchemy_serializer/lib/: fields.py  rules.py  schema.py  timezones.py  utils.py
sqlalchemy_serializer/lib/serializable/: __init__.py  base.py  bytes.py  date.py  datetime.py  decimal.py  enum.py  time.py  uuid.py
tests/: README.md  __init__.py  conftest.py  mixin_test.py  models.py  requirements.txt  test_benchmark.py  test_complex_nested_models.py  test_custom_model.py  test_custom_serializer.py  test_custom_serializer_class.py  test_error_handling.py  test_exclude_values.py  test_flat_model.py  test_get_property_field_names_function.py  test_get_serializable_keys_function.py  test_get_sql_field_names_function.py  test_is_valid_callable.py  test_max_serialization_depth.py  test_modern_models.py  test_nested_model.py  test_performance.py  test_pypi_readiness.py  test_recursive_model.py  test_rules.py  test_schema.py  test_serialize_collection_function.py  test_serialize_columns.py  test_serializer_fork_function.py  test_serializer_serialize_dict__function.py  test_serializer_serialize_model__function.py  test_serializer_set_recursion_depth_function.py  test_serializer_set_serialization_depth_function.py  test_tree.py  test_tzinfo.py  utils.py
tests/datatypes/: test_enum.py
to_dict/: __init__.py  serializer.py
