[tool.poetry]
name = "sqlalchemy-serializer"
version = "1.4.22"
description = "Mixin for SQLAlchemy models serialization without pain"
authors = ["yuri.boiko <yuri.boiko.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [
    "README.md",
    "LICENSE",
    "sqlalchemy_serializer/**"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["sqlalchemy", "serialize", "to_dict", "JSON"]
repository = "https://github.com/n0nSmoker/SQLAlchemy-serializer"

[tool.poetry.dependencies]
python = "*"
SQLAlchemy = "*"
psycopg2-binary = "*"
pytz = "*"
setuptools = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pylama = "*"
requests = "*"
black = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-xvrs --color=yes"
log_cli = true
