[project]
name = "sqlalchemy-serializer"
version = "1.5.1"
description = "Mixin for SQLAlchemy models serialization without pain"
authors = [
    {name = "yuri.boiko", email = "yuri.boiko.dev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["sqlalchemy", "serialize", "to_dict", "JSON"]
dependencies = [
    "SQLAlchemy==2.0.45",
    "psycopg2-binary==2.9.11",
    "pytz>=2025.2",
    "setuptools>=80.9.0",
]

[dependency-groups]
lint = [
    "ruff>=0.9.4",
    "isort>=6.0.1",
]
test = [
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "requests==2.32.5",
    "pytest-mock>=3.15.1",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
repository = "https://github.com/n0nSmoker/SQLAlchemy-serializer"

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
addopts = "-xvrs --color=yes -m 'not pypi'"
log_cli = true
markers = [
    "pypi: marks tests that require PyPI access (deselect with -m 'not pypi')",
]


[tool.ruff]
line-length = 95

# Exclude a variety of commonly ignored directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "dist",
]

lint.select = [
    "YTT",  # flake8-2020
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "ASYNC",  # flake8-async
    "BLE",  # flake8-blind-except
    "B",  # flake8-bugbear
    "COM", # flake8-commas
    "W",  # pycodestyle warnings
    "TC",  # flake8-type-checking
    "ANN",  # flake8-annotations
    "C90",  # mccabe
    "PL",  # pylint
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "G",  # flake8-logging-format
    # "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "SLOT",  # flake8-slots
    "TID",  # flake8-tidy-imports
    "TC",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "NPY",  # NumPy-specific rules
    "PERF",  # Perflint (PERF)
]
# Allow unused variables when underscore-prefixed
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
lint.ignore = [
    "ANN002",  # Missing type annotation for *args
    "ANN201",  # Add return type annotation: `None`
    "ANN204",  # Missing return type annotation for special method
    "ANN202",  # Missing return type annotation for private function
    "ANN003",  # Missing type annotation for `**kwargs`
    "ANN001",  # Missing type annotation for function argument
    "B008",  # Function calls in default function arguments.
    "COM812",  # Checks for the absence of trailing commas
    "S101",  # Use of `assert` detected
    "PLR0913",  # Too many positional arguments for function call
    "PLR2004",  # Magic value
    "PLW1508",  # Invalid type for environment variable default; expected `str` or `None`
    "PYI024",  # Use `typing.NamedTuple` instead of `collections.namedtuple`
    "SIM118",  # Use `key in dict` instead of `key in dict.keys()`
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.isort]
profile = "black"
line_length = 95

[tool.ruff.lint.isort]
known-first-party = ["sqlalchemy_serializer"]
